# Calc2KeyCEWireless

./: .gitignore  Launch-Calc2KeyBridge.bat  Launch-Calc2KeyBridge.ps1  README.md  bridge-host.local.env.example  keybinds  pkglist.txt
.github/workflows/: release-artifacts.yml
Calc2KeyCE.BridgeHostWin/: CMakeLists.txt  bridge_host_main.cpp
Calc2KeyCE.Calc/src/: main.c
Calc2KeyCE.Fast/: CMakeLists.txt  LinuxDesktopDup.cpp  LinuxDesktopDup.h  bridge_client.cpp  bridge_client.h  bridge_protocol.cpp  bridge_protocol.h  compression.c  main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h
Calc2KeyCE.PiRelay/: CMakeLists.txt  main.cpp  terminal_main.cpp
Calc2PiCon.Calc/: makefile
Calc2PiCon.Calc/src/: main.c
tools/: calc2key-pirelay.service.example  extract_securew2.ps1  install-pi-relay.sh  package-calculator-release.ps1  package-calculator-release.sh  package-pi-relay-release.sh  package-windows-host-release.ps1
